@@ -1,4 +1,6 @@
-# Set of styles like the Geany <= 0.19 Python/script defaults with gray comments.
+[theme_info]
+name=Alternate
+description=Alternate Geany color scheme with styles like the Geany <= 0.19 Python/script defaults with gray comments.
 
 [named_styles]
 # see filetypes.common for details
