@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2011-04-26" />
+<meta name="date" content="2011-04-30" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2011-04-26</td></tr>
+<td>2011-04-30</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.21</td></tr>
 </tbody>
@@ -1891,13 +1891,17 @@ including the default scheme first. Other items are available based
 on what color scheme files Geany found at startup.</p>
 <p>Color scheme files are read from the <a class="reference" href="#configuration-file-paths">Configuration file paths</a> under
 the <tt class="docutils literal"><span class="pre">colorschemes</span></tt> subdirectory. They should have the extension
-<tt class="docutils literal"><span class="pre">.conf</span></tt> and currently only contain a <a class="reference" href="#named-styles-section">[named_styles] section</a>. The
-default color scheme is read from <tt class="docutils literal"><span class="pre">filetypes.common</span></tt>.</p>
+<tt class="docutils literal"><span class="pre">.conf</span></tt>. The default color scheme
+is read from <tt class="docutils literal"><span class="pre">filetypes.common</span></tt>.</p>
+<p>The <a class="reference" href="#named-styles-section">[named_styles] section</a> is the same as for <tt class="docutils literal"><span class="pre">filetypes.common</span></tt>.</p>
 <div class="note">
 <p class="first admonition-title">Note</p>
 <p class="last">Some filetypes do not yet support named styles so will ignore
 any chosen color scheme.</p>
 </div>
+<p>The <tt class="docutils literal"><span class="pre">[theme_info]</span></tt> section can contain information about the
+theme. The <tt class="docutils literal"><span class="pre">name</span></tt> and <tt class="docutils literal"><span class="pre">description</span></tt> keys are read to set the
+menu item text and tooltip, respectively.</p>
 </div>
 </div>
 <div class="section">
@@ -6556,7 +6560,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2011-04-30 15:22 UTC.
+Generated on: 2011-04-30 16:23 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
