@@ -1478,12 +1478,18 @@ on what color scheme files Geany found at startup.
 
 Color scheme files are read from the `Configuration file paths`_ under
 the ``colorschemes`` subdirectory. They should have the extension
-``.conf`` and currently only contain a `[named_styles] section`_. The
-default color scheme is read from ``filetypes.common``.
+``.conf``. The default color scheme
+is read from ``filetypes.common``.
+
+The `[named_styles] section`_ is the same as for ``filetypes.common``.
 
 .. note::
     Some filetypes do not yet support named styles so will ignore
     any chosen color scheme.
+
+The ``[theme_info]`` section can contain information about the
+theme. The ``name`` and ``description`` keys are read to set the
+menu item text and tooltip, respectively.
 
 Tags
 ----
